back go original idea, will use guid to transform image name and save that as url to user avatar = no way to know which user's image is that and mystifying it is done only once. security issue also addressed as randomly just querying user images won't work unless you already know the image url. Image for-eaching also impossible in this implementation of viewing the images

--- a/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/ASP.NET-MVC-Forum/ASP.NET-MVC-Forum/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -32,6 +32,37 @@
 
 @*Image upload*@
 
+<div class="row">
+    <div class="col-md-6">
+        <form method="post" enctype="multipart/form-data"
+              asp-area="" asp-controller="Users" asp-action="UploadAvatar">
+            <div class="form-group">
+                <hr class="mt-4 mb-3" />
+                <h5 class="mb-3">User image</h5>
+                <input type="file" name="file" accept="image/png, image/jpeg, image/bmp, image/webp">
+            </div>
+            <button class="btn btn-primary" type="submit">Upload</button>
+        </form>
+        @if (TempData.ContainsKey("Message"))
+        {
+            if (TempData["Message"].ToString().Contains("successfully"))
+            {
+                <div id="message" class="alert alert-success mt-3" role="alert">
+                    @TempData["Message"]
+                </div>
+            }
+            else
+            {
+                <div id="message" class="alert alert-danger mt-3" role="alert">
+                    @TempData["Message"]
+                </div>
+            }
+        }
+
+        <img src="../Storage/Avatars/admin-avatar.jpg">
+
+    </div>
+</div>
 
 
 
